scribble/scribble-assertions/src/test/resources/good/extensions/assrtcore/safety/assrtprog/statevar/AssrtCoreTest14.scr
module good.extensions.assrtcore.safety.assrtprog.statevar.AssrtCoreTest14;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B)
{
	1() from A to B;
	do Proto2(A, B); @"<4>"
}

//aux global protocol Proto2(role A, role B) @"<x:=3>"
aux global protocol Proto2(role A, role B) @"<x:=3> x=4"  // Bad if validated as root (init-rec-assert)
{
	2() from B to A; @"(x=4)"
}
//*/
